--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,13 +79,12 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
     - family: Mojangles
       fonts:
         - asset: fonts/Mojangles.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+    - family: Torus
+      fonts:
+        - asset: fonts/torus.otf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
